# py_edl_editor

./: .gitignore  .pypirc  LICENSE  README.md  __main__.py  edl_editor.py  example.ccc  package-info.rst  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml
py_edl_editor/: __init__.py  __main__.py  cdl.py  cdl_tools.py  edl_parser.py  edl_table.py  gui.py  gui_controller.py  tc_tools.py
py_edl_editor/test/: test_remove_tc_gaps.py  test_tc_calculations.py
py_edl_editor/test/files/: edl_with_gaps.edl  edl_with_gaps_start0.edl  edl_with_gaps_start0_plus_handles.edl  edl_without_gaps.edl
